--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.2.5",
     "cookie-parser": "^1.4.4",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
   },
