--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cookie-parser": "^1.4.4",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "moment": "^2.24.0",
+    "mysql": "^2.18.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {},
   "scripts": {
